fix markdown.css to wrap text in code block

--- a/resources/markdown.css
+++ b/resources/markdown.css
@@ -82,6 +82,7 @@ pre code {
    white-space: pre;
    border: none;
    background: transparent;
+   white-space: pre-wrap;
 }
 aside {
     display: block;
